syntax = "proto3";

package anima;
option go_package="anima/grpc;grpc";

message Empty {}

message IssueDocumentRequest {
    IssDocument document = 1;
    map<string, IssAttribute> attributes = 2;
    IssProof proof = 3;
}

message IssueRequest {
    IssueDocumentRequest liveness = 1;
    IssueDocumentRequest document = 2;
}

message IssLiveness {
    string specs = 1;
    string id = 2;
}

message IssDocument {
    string specs = 1;
    int64 issued_at = 2;
    int64 expires_at = 3;
    map<string, IssDocumentAttribute> attributes = 4;
    AnimaOwner owner = 5;
    IssAuthorization authorization = 6;
    IssLiveness liveness = 7;
}

message IssAuthorization {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message IssDocumentAttribute {
    IssDocumentAttributeContent content = 1;
    IssDocumentAttributeCredential credential = 2;
}

message IssDocumentAttributeContent {
    string value = 1;
    repeated string values = 2;
    string type = 3;
    string format = 4;
    string name = 5;
    AnimaOwner owner = 6;
    IssAuthorization authorization = 7;
}

message IssDocumentAttributeCredential {
    string specs = 1;
    string id = 2;
}

message IssAttribute {
    bytes value = 1;
    repeated bytes values = 2;
    IssDocumentAttributeContent content = 3;
    IssAttributeCredential credential = 4;
}

message IssAttributeCredential {
    IssAttributeCredentialContent content = 1;
    string signature = 2;
}

message IssAttributeCredentialContent {
    int64 issued_at = 1;
    int64 expires_at = 2;
    AnimaOwner owner = 4;
    AnimaIssuer issuer = 5;
    IssAttributeCredentialContentDocument document = 6;
    IssAttributeCredentialContentAttribute attribute = 7;
    IssAttributeCredentialContentProof proof = 8;
    IssAttributeCredentialContentAuthorization authorization = 9;
}

message IssAttributeCredentialContentDocument {
    string id = 1;
    string specs = 2;
}

message IssAttributeCredentialContentProof {
    string id = 1;
    string specs = 2;
}

message IssAttributeCredentialContentAuthorization {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message IssAttributeCredentialContentAttribute {
    string id = 1;
    string specs = 2;
    string name = 3;
    string hash = 4;
    repeated string hashes = 5;
}

message IssProof {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message VerifyRequest {
    SharingAuthorization authorization = 1;
}

message VerifyResponse {
    VerificationContent content = 1;
    string signature = 2;
}

message VerificationDocument {
    AnimaVerifier verifier = 1;
    AnimaOwner owner = 2;
    AnimaIssuer issuer = 3;
    AnimaProtocol protocol = 4;
    VerificationProof proof = 5;
    map<string, AnimaCredentialAttribute> credentials = 6;
    SharingAuthorization authorization = 7;
}

message VerificationContent {
    VerificationDocument document = 1;
    VerificationDocument liveness = 2;
}

message AnimaDocument {
    string id = 1;
    string specs = 2;
}

message AnimaAttribute {
    string id = 1;
    string specs = 2;
}

message AnimaProof {
    string id = 1;
    string specs = 2;
}

message AnimaCredentialAttribute {
    AnimaOwner owner = 1;
    AnimaIssuer issuer = 2;
    AnimaDocument document = 3;
    IssAttributeCredentialContentAttribute attribute = 4;
    AnimaProof proof = 5;
    int64 issued_at = 6;
    int64 expires_at = 7;
}

message SharingAuthorization {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message VerificationProof {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message AnimaVerifier {
    string id = 1;
    string public_address = 2;
    string chain = 3;
}

message AnimaOwner {
    string id = 1;
    string public_address = 2;
    string chain = 3;
    string wallet = 4;
}

message AnimaProtocol {
    string id = 1;
    string public_address = 2;
    string chain = 3;
}

message AnimaIssuer {
    string id = 1;
    string public_address = 2;
    string chain = 3;
}

message RegisterVerifierRequest {
    string id = 1;
    string public_address = 2;
    string chain = 3;
    bytes logo = 4;
    string description = 5;
    string name = 6;
}

message RegisterVerifierResponse {
    string id = 1;
}

message GrantTrusteeRequest {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message RevokeTrusteeRequest {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message ListTrusteesRequest {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message DeleteAnimaRequest {
    string specs = 1;
    string content = 2;
    string signature = 3;
}

message ListTrusteesResponse {
    string id = 1;
    AnimaOwner owner = 2;
    AnimaProtocol protocol = 3;
    repeated string trusted_address = 4;
}

message StatusRequest {}

message StatusResponse {
    string status = 1;
    uint64 uptime = 2;
    string version = 3;
}

message RequestActionRequest {
    string address = 1;
}

message RequestActionResponse {
    string nonce = 1;
}

service Anima {
    rpc Status(StatusRequest) returns (StatusResponse) {};
    rpc Issue(IssueRequest) returns (Empty) {};
    rpc CreateAnima(IssueDocumentRequest) returns (Empty) {};
    rpc Verify(VerifyRequest) returns (VerifyResponse) {};
    rpc RegisterVerifier(RegisterVerifierRequest) returns (RegisterVerifierResponse) {};
    rpc RequestAction(RequestActionRequest) returns (RequestActionResponse) {};
    rpc GrantTrustee(GrantTrusteeRequest) returns (Empty) {};
    rpc RevokeTrustee(RevokeTrusteeRequest) returns (Empty) {};
    rpc ListTrustees(ListTrusteesRequest) returns (ListTrusteesResponse) {};
    rpc DeleteAnima(DeleteAnimaRequest) returns (Empty) {};
}
